@@ -14,6 +14,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
+import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.InetAddress;
@@ -50,11 +51,11 @@ public class ASRController {
 
     @GetMapping(value = "/testExecShellScript")
     public String testExecShellScript() throws IOException, InterruptedException {
-        String command = "sh /home/test/test.sh";
         log.info("开始执行脚本...");
-        Process process = Runtime.getRuntime().exec(command);
+        ProcessBuilder pb = new ProcessBuilder("/home/test/test.sh", "test");
+        Process process = pb.start();
         int exitValue = process.waitFor();
-        return "执行脚本成功！exitValue is" + exitValue;
+        return "exitValue is " + exitValue;
     }
 
     @GetMapping(value = "/getTranslateResultFile")
